  (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)

- #11576: Fix bug in Bigarray.Genarray.init in the the case of zero-dimensional
  arrays.
  (Nicolás Ojeda Bär, Jeremy Yallop, report by Masayuki Takeda, review by Jeremy
  Yallop and Florian Angeletti)

- #11587: Prevent integer comparison from being used on pointers
  (Vincent Laviron, review by Gabriel Scherer)

OCaml 4.14 maintenance branch
-----------------------------

- #11508, #11509: make Bytes.escaped domain-safe
  (Christiano Haesbaert and Gabriel Scherer,
   review by Xavier Leroy,
   report by Jan Midtgaard and Tom Kelly)

### Manual and documentation:

- #11045, #11409: document that the array argument to `caml_callbackN`
  must not have been declared by `CAMLlocalN`.
  (Xavier Leroy, report by Stephen Dolan, review by Gabriel Scherer.)

### Bug fixes:

- #11489, #11496: More prudent deallocation of alternate signal stack
  (Xavier Leroy, report by @rajdakin, review by Florian Angeletti)


OCaml 4.14.0 (28 March 2022)
----------------------------

### Language features:

- #10462: Add attribute to produce a compiler error for polls.
  (Sadiq Jaffer, review by Mark Shinwell, Stephen Dolan
   and Guillaume Munch-Maccagnoni)

- #10437: Allow explicit binders for type variables.
  (Stephen Dolan, review by Leo White)

- #10441: Remove unnecessary parentheses surrounding immediate objects.
  Allow 'object ... end # f', 'f object ... end', etc.
  (Yan Dong, review by Nicolás Ojeda Bär, Florian Angeletti and Gabriel Scherer)

- #181, #9760, #10740: opt-in tail-modulo-cons (TMC) transformation
    let[@tail_mod_cons] rec map f li = ...
  (Frédéric Bour, Gabriel Scherer, Basile Clément,
   review by Basile Clément and Pierre Chambart,
   tested by Konstantin Romanov)

### Runtime system:

* #9391, #9424: Fix failed assertion in runtime due to ephemerons *set_* and
  *blit_* function during Mark phase
  (François Bobot, reported by Stephen Dolan, reviewed by Damien Doligez)
